# nestrs

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  ROADMAP.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
apps/api/: Cargo.toml  schema.graphql
apps/api/src/: app.rs  auth.rs  authz.rs  errors.rs  graphql.rs  lib.rs  main.rs
apps/api/src/authn/: controller.rs  guard.rs  mod.rs  module.rs  oauth.rs  principal.rs  service.rs  strategy.rs
apps/api/src/authz/: ability.rs  mod.rs  module.rs
apps/api/src/orgs/: controller.rs  entity.rs  mod.rs  module.rs  resolver.rs  service.rs
apps/api/src/users/: controller.rs  dto.rs  entity.rs  job.rs  mod.rs  module.rs  resolver.rs  service.rs
apps/api/tests/: e2e.rs  graphql_pagination.rs
apps/app/: Cargo.toml
apps/app/src/: app.rs  lib.rs  main.rs
apps/app/src/hello/: controller.rs  mod.rs  module.rs  service.rs
apps/app/tests/: e2e.rs  wiring.rs
apps/auth/: Cargo.toml
apps/auth/src/oauth/: service.rs
apps/chat/src/: app.rs  lib.rs
apps/chat/src/chat/: guard.rs
apps/chat/src/notify/: gateway.rs  mod.rs  module.rs
apps/chat/tests/: e2e.rs
apps/db/: Cargo.toml
apps/db/src/: lib.rs
apps/db/src/migrations/: m20260526_000000_create_org.rs  m20260526_000001_create_user.rs  mod.rs
apps/db/src/seed/: mod.rs
apps/db/src/seed/factories/: mod.rs  org.rs  user.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: app.rs  lib.rs  main.rs
apps/mcp/src/weather/: client.rs  config.rs  controller.rs  dto.rs  mod.rs  module.rs  service.rs
apps/mcp/tests/: e2e.rs
apps/worker/: Cargo.toml
apps/worker/src/: app.rs  lib.rs  main.rs
apps/worker/src/audio/: consumer.rs  producer.rs
apps/worker/tests/: e2e.rs
crates/nestrs-auth/: Cargo.toml
crates/nestrs-auth/src/: error.rs  guard.rs  jwt.rs  lib.rs  module.rs  oauth.rs  strategy.rs
crates/nestrs-authz/: Cargo.toml
crates/nestrs-authz-graphql/src/: bind.rs
crates/nestrs-authz-graphql/tests/: authorize.rs
crates/nestrs-authz-http/: Cargo.toml
crates/nestrs-authz-http/src/: bind.rs  extractor.rs  guard.rs  lib.rs  shape.rs
crates/nestrs-authz/src/: ability.rs  action.rs  builder.rs  extractor.rs  factory.rs  lib.rs  predicate.rs  shape.rs  subject.rs
crates/nestrs-codegen/: Cargo.toml
crates/nestrs-codegen/src/: inject.rs  lib.rs
crates/nestrs-config/: Cargo.toml
crates/nestrs-config/src/: lib.rs
crates/nestrs-core/: Cargo.toml
crates/nestrs-core/src/: access.rs  app.rs  config.rs  container.rs  discoverable.rs  discovery.rs  error.rs  job.rs  lib.rs  lifecycle.rs  logging.rs  module.rs  scope.rs  transport.rs
crates/nestrs-core/tests/: access_graph.rs  job_context.rs
crates/nestrs-events/tests/: bus.rs
crates/nestrs-graphql/: Cargo.toml
crates/nestrs-graphql-cli/: Cargo.toml
crates/nestrs-graphql-cli/src/: lib.rs
crates/nestrs-graphql-macros/: Cargo.toml
crates/nestrs-graphql-macros/src/: lib.rs  resolver.rs
crates/nestrs-graphql/src/: context.rs  lib.rs  loader.rs  module.rs  resolver.rs
crates/nestrs-graphql/tests/: context.rs  resolver_guard.rs  resolver_membership.rs
crates/nestrs-health/: Cargo.toml
crates/nestrs-health/src/: controller.rs  lib.rs  module.rs  service.rs
crates/nestrs-http/: Cargo.toml
crates/nestrs-http-macros/: Cargo.toml
crates/nestrs-http-macros/src/: attr.rs  controller.rs  interceptor.rs  lib.rs  routes.rs
crates/nestrs-http/src/: controller.rs  interceptor.rs  lib.rs  pipe.rs  scope.rs  shaper.rs  transport.rs
crates/nestrs-macro-support/src/: lib.rs
crates/nestrs-macros/: Cargo.toml
crates/nestrs-macros/src/: lib.rs
crates/nestrs-mcp/: Cargo.toml
crates/nestrs-mcp-macros/: Cargo.toml
crates/nestrs-mcp-macros/src/: lib.rs
crates/nestrs-mcp/src/: lib.rs
crates/nestrs-middleware/src/: filter.rs  guard.rs  interceptor.rs
crates/nestrs-openapi/: Cargo.toml
crates/nestrs-openapi/assets/: index.html
crates/nestrs-openapi/src/: document.rs  lib.rs  module.rs  ui.rs
crates/nestrs-orm/src/: lib.rs  module.rs  service.rs  worker.rs
crates/nestrs-orm/tests/: worker_executor.rs
crates/nestrs-pipes/: Cargo.toml
crates/nestrs-pipes/src/: lib.rs  parse.rs  parse_array.rs  parse_uuid.rs  pipe.rs  transform.rs  validation.rs
crates/nestrs-queue-macros/: Cargo.toml
crates/nestrs-queue-macros/src/: lib.rs
crates/nestrs-queue/src/: lib.rs  module.rs  processor.rs
crates/nestrs-resource/: Cargo.toml
crates/nestrs-resource-macros/: Cargo.toml
crates/nestrs-resource-macros/src/: attr.rs  dto.rs  input.rs  lib.rs
crates/nestrs-resource/src/: lib.rs  pagination.rs
crates/nestrs-schedule/: Cargo.toml
crates/nestrs-schedule-macros/: Cargo.toml
crates/nestrs-schedule-macros/src/: lib.rs
crates/nestrs-schedule/src/: lib.rs  scheduler.rs
crates/nestrs-schedule/tests/: scheduler.rs
crates/nestrs-server-timing/src/: interceptor.rs
crates/nestrs-telemetry/: Cargo.toml
crates/nestrs-telemetry/src/: config.rs  interceptor.rs  lib.rs  otlp.rs  telemetry.rs
crates/nestrs-testing/: Cargo.toml
crates/nestrs-testing/src/: database.rs  lib.rs
crates/nestrs-testing/tests/: http.rs  interceptors.rs  request_scope.rs  versioning_filters.rs
crates/nestrs-throttler/: Cargo.toml
crates/nestrs-throttler/src/: guard.rs  lib.rs  module.rs  store.rs  throttle.rs
crates/nestrs-ws-macros/src/: gateway.rs  lib.rs  messages.rs
crates/nestrs-ws/src/: gateway.rs  guard.rs  lib.rs  server.rs
