[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/yvanitou/nestrs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry stack. SDK pinned with rt-tokio so batch exporters run on our
# async runtime; OTLP exporter uses HTTP/protobuf over reqwest so we reuse the
# rustls toolchain already in the workspace (no tonic/openssl).
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
# Defaults give us http-proto + reqwest-blocking-client + trace/metrics/logs.
# The batch processors run their HTTP exports from a dedicated thread that is
# *not* a Tokio reactor, so the blocking reqwest client is the right pick —
# the upstream-recommended pairing for batch exporters.
opentelemetry-otlp = "0.32"
opentelemetry-http = "0.32"
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = "0.32"
tracing-opentelemetry = "0.33"

# Errors
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP
poem = { version = "3", features = ["tower-compat"] }

# Async traits (needed for `dyn Trait` containing async methods on Rust 1.75)
async-trait = "0.1"

# GraphQL
async-graphql = "7"
async-graphql-poem = "7"

# Input validation
validator = { version = "0.20", features = ["derive"] }

# UUIDs
uuid = { version = "1", features = ["v7"] }

# HTTP client (rustls so we avoid an OpenSSL system dep)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# MCP server SDK + JSON Schema derive used by tool parameters.
# schemars must match rmcp's re-exported version so the derive resolves to the
# same trait rmcp::handler::server::wrapper::Parameters expects.
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"

# Proc-macro dependencies
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Internal crates
nestrs-core = { path = "crates/nestrs-core" }
nestrs-macros = { path = "crates/nestrs-macros" }
nestrs-health = { path = "crates/nestrs-health" }
nestrs-mcp = { path = "crates/nestrs-mcp" }
nestrs-middleware = { path = "crates/nestrs-middleware" }
nestrs-server-timing = { path = "crates/nestrs-server-timing" }
nestrs-telemetry = { path = "crates/nestrs-telemetry" }

[profile.release]
lto = "thin"
codegen-units = 1
