[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/yvanitou/nestrs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry stack. SDK pinned with rt-tokio so batch exporters run on our
# async runtime; OTLP exporter uses HTTP/protobuf over reqwest so we reuse the
# rustls toolchain already in the workspace (no tonic/openssl).
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
# Defaults give us http-proto + reqwest-blocking-client + trace/metrics/logs.
# The batch processors run their HTTP exports from a dedicated thread that is
# *not* a Tokio reactor, so the blocking reqwest client is the right pick —
# the upstream-recommended pairing for batch exporters.
opentelemetry-otlp = "0.32"
opentelemetry-http = "0.32"
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = "0.32"
tracing-opentelemetry = "0.33"

# Errors
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP
poem = { version = "3", features = ["tower-compat"] }

# Async traits (needed for `dyn Trait` containing async methods on Rust 1.75)
async-trait = "0.1"

# GraphQL. `dataloader` gives us async-graphql's batching loader, surfaced via
# the `#[dataloader]` decorator to kill field-resolver N+1s.
async-graphql = { version = "7", features = ["dataloader"] }
async-graphql-poem = "7"
# Link-time registry: each `#[resolver]` submits its query/mutation objects so
# the schema composes itself at boot with no central list.
inventory = "0.3"

# Input validation
validator = { version = "0.20", features = ["derive"] }

# UUIDs. `serde` so entity rows (whose ids are UUIDs) serialize for the authz
# response masker and JSON responses.
uuid = { version = "1", features = ["v7", "serde"] }

# ORM. SeaORM 2.0 — the latest published is the `2.0.0-rc` line (the 2.0.0 final
# is not yet on crates.io, so the pre-release is pinned explicitly). Postgres
# over the rustls toolchain already used across the workspace.
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }

# HTTP client (rustls so we avoid an OpenSSL system dep)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# MCP server SDK + JSON Schema derive used by tool parameters.
# schemars must match rmcp's re-exported version so the derive resolves to the
# same trait rmcp::handler::server::wrapper::Parameters expects.
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"

# Redis-backed job queues (NestJS's `@nestjs/bullmq` analog). apalis is the
# background-task framework; apalis-redis is its Redis storage backend. Pinned to
# the 0.7 stable line — 1.0 is still churning through release candidates and does
# not clear our "no pre-release in a foundation dep" bar.
apalis = "0.7"
apalis-redis = "0.7"

# Proc-macro dependencies
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Internal crates
nestrs-core = { path = "crates/nestrs-core" }
nestrs-authz = { path = "crates/nestrs-authz" }
nestrs-authz-http = { path = "crates/nestrs-authz-http" }
nestrs-macro-support = { path = "crates/nestrs-macro-support" }
nestrs-macros = { path = "crates/nestrs-macros" }
nestrs-graphql = { path = "crates/nestrs-graphql" }
nestrs-graphql-macros = { path = "crates/nestrs-graphql-macros" }
nestrs-health = { path = "crates/nestrs-health" }
nestrs-http = { path = "crates/nestrs-http" }
nestrs-http-macros = { path = "crates/nestrs-http-macros" }
nestrs-mcp = { path = "crates/nestrs-mcp" }
nestrs-mcp-macros = { path = "crates/nestrs-mcp-macros" }
nestrs-middleware = { path = "crates/nestrs-middleware" }
nestrs-openapi = { path = "crates/nestrs-openapi" }
nestrs-orm = { path = "crates/nestrs-orm" }
nestrs-pipes = { path = "crates/nestrs-pipes" }
nestrs-queue = { path = "crates/nestrs-queue" }
nestrs-queue-macros = { path = "crates/nestrs-queue-macros" }
nestrs-resource = { path = "crates/nestrs-resource" }
nestrs-resource-macros = { path = "crates/nestrs-resource-macros" }
nestrs-schedule = { path = "crates/nestrs-schedule" }
nestrs-schedule-macros = { path = "crates/nestrs-schedule-macros" }
nestrs-server-timing = { path = "crates/nestrs-server-timing" }
nestrs-telemetry = { path = "crates/nestrs-telemetry" }

[profile.release]
lto = "thin"
codegen-units = 1
