[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/NestRS/NestRS"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry stack. SDK pinned with rt-tokio so batch exporters run on our
# async runtime; OTLP exporter uses HTTP/protobuf over reqwest so we reuse the
# rustls toolchain already in the workspace (no tonic/openssl).
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
# Defaults give us http-proto + reqwest-blocking-client + trace/metrics/logs.
# The batch processors run their HTTP exports from a dedicated thread that is
# *not* a Tokio reactor, so the blocking reqwest client is the right pick —
# the upstream-recommended pairing for batch exporters.
opentelemetry-otlp = "0.32"
opentelemetry-http = "0.32"
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = "0.32"
tracing-opentelemetry = "0.33"

# Errors
thiserror = "2"
anyhow = "1"

# JWT — the engine `@nestjs/jwt` itself wraps on the npm side; HS/RS/ES algorithms.
# `rust_crypto` selects the pure-Rust backend (no aws-lc-rs C dependency), matching
# the workspace's rustls posture; jsonwebtoken 10 requires picking one explicitly.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# OAuth2 Authorization Code flow (+ PKCE); the `reqwest` backend below drives its
# token exchange. The per-provider strategy lives in the app, like Passport.
oauth2 = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP. The `anyhow` feature gives `poem::Error: From<anyhow::Error>` (→ 500), so a
# handler can `?` a service's `anyhow::Result` straight through — no hand-written
# error→response mapping in the app. `rustls` terminates TLS at the transport
# (`HttpTransport::tls`) with no OpenSSL system dependency, keeping the
# single-static-binary promise.
poem = { version = "3", features = ["tower-compat", "anyhow", "rustls"] }

# Response-body plumbing for the access log: wrap poem's body stream in a byte
# counter so the access event reports the exact size sent (poem stamps
# Content-Length past the interceptor). `bytes::Bytes` is the chunk type,
# `futures-core` the `Stream` trait the wrapper implements.
bytes = "1"
futures-core = "0.3"

# Async traits (needed for `dyn Trait` containing async methods on Rust 1.75)
async-trait = "0.1"

# GraphQL. `dataloader` gives us async-graphql's batching loader, surfaced via
# the `#[dataloader]` decorator to kill field-resolver N+1s.
async-graphql = { version = "7", features = ["dataloader"] }
async-graphql-poem = "7"
# Link-time registry: each `#[resolver]` submits its query/mutation objects so
# the schema composes itself at boot with no central list.
inventory = "0.3"

# Input validation
validator = { version = "0.20", features = ["derive"] }

# UUIDs. `serde` so entity rows (whose ids are UUIDs) serialize for the authz
# response masker and JSON responses.
uuid = { version = "1", features = ["v7", "serde"] }

# Fake data for the shared-database seeder's factories (names, emails, company
# names). Pulls `rand` transitively, so `.fake()` needs no direct rand dep.
fake = "5"

# ORM. SeaORM 2.0 — the latest published is the `2.0.0-rc` line (the 2.0.0 final
# is not yet on crates.io, so the pre-release is pinned explicitly). Postgres
# over the rustls toolchain already used across the workspace.
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
# Migration runner + schema builder. Same release line as sea-orm; the bundled
# `cli` feature gives the `migrate` binary its up/down/fresh/status subcommands.
sea-orm-migration = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# HTTP client (rustls so we avoid an OpenSSL system dep)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# MCP server SDK + JSON Schema derive used by tool parameters.
# schemars must match rmcp's re-exported version so the derive resolves to the
# same trait rmcp::handler::server::wrapper::Parameters expects.
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
# `uuid1` adds the `JsonSchema` impl for `uuid::Uuid` so UUID-typed DTO fields can
# be documented (and typed at the edge) rather than passed around as strings.
schemars = { version = "1", features = ["uuid1"] }

# Cron expression parsing for #[cron_job(cron = "...")]. croner accepts 5/6/7
# fields (seconds optional), matching the flexibility of the `cron` npm package
# NestJS's @nestjs/schedule builds on. chrono is its time type; chrono-tz
# resolves an IANA name for the optional per-job timezone.
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"

# Redis-backed job queues (NestJS's `@nestjs/bullmq` analog). apalis is the
# background-task framework; apalis-redis is its Redis storage backend. Pinned to
# the 0.7 stable line — 1.0 is still churning through release candidates and does
# not clear our "no pre-release in a foundation dep" bar.
apalis = "0.7"
apalis-redis = "0.7"

# Proc-macro dependencies
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Business-shared crates (not framework — no `nestrs-` prefix). Domain contracts
# several apps must agree on, e.g. the JWT claims the `auth` app signs and the
# `api` app verifies.
identity = { path = "crates/identity" }

# Internal crates (framework)
nestrs-core = { path = "crates/nestrs-core" }
nestrs-auth = { path = "crates/nestrs-auth" }
nestrs-throttler = { path = "crates/nestrs-throttler" }
nestrs-config = { path = "crates/nestrs-config" }
nestrs-events = { path = "crates/nestrs-events" }
nestrs-events-macros = { path = "crates/nestrs-events-macros" }
nestrs-authz = { path = "crates/nestrs-authz" }
nestrs-authz-graphql = { path = "crates/nestrs-authz-graphql" }
nestrs-authz-http = { path = "crates/nestrs-authz-http" }
nestrs-codegen = { path = "crates/nestrs-codegen" }
nestrs-macros = { path = "crates/nestrs-macros" }
nestrs-graphql = { path = "crates/nestrs-graphql" }
nestrs-graphql-macros = { path = "crates/nestrs-graphql-macros" }
nestrs-health = { path = "crates/nestrs-health" }
nestrs-http = { path = "crates/nestrs-http" }
nestrs-http-macros = { path = "crates/nestrs-http-macros" }
nestrs-mcp = { path = "crates/nestrs-mcp" }
nestrs-mcp-macros = { path = "crates/nestrs-mcp-macros" }
nestrs-middleware = { path = "crates/nestrs-middleware" }
nestrs-openapi = { path = "crates/nestrs-openapi" }
nestrs-orm = { path = "crates/nestrs-orm" }
nestrs-pipes = { path = "crates/nestrs-pipes" }
nestrs-queue = { path = "crates/nestrs-queue" }
nestrs-queue-macros = { path = "crates/nestrs-queue-macros" }
nestrs-resource = { path = "crates/nestrs-resource" }
nestrs-resource-macros = { path = "crates/nestrs-resource-macros" }
nestrs-schedule = { path = "crates/nestrs-schedule" }
nestrs-schedule-macros = { path = "crates/nestrs-schedule-macros" }
nestrs-server-timing = { path = "crates/nestrs-server-timing" }
nestrs-telemetry = { path = "crates/nestrs-telemetry" }
nestrs-testing = { path = "crates/nestrs-testing" }

# Release: smallest, fastest binary. Compile time is not a concern here.
[profile.release]
opt-level = 3       # max performance (the release default; explicit for clarity)
lto = "fat"         # whole-program optimisation: best cross-crate dead-code elimination
codegen-units = 1   # a single unit gives the optimiser the most to work with
strip = true        # drop symbols from the final binary (~18 MB -> ~15 MB)

# Dev: fastest possible iterative compile. opt-level = 0 and incremental = true
# are already the defaults; the win here is dropping full debuginfo while keeping
# file:line in backtraces, which speeds up both codegen and linking.
[profile.dev]
debug = "line-tables-only"
