[package]
name = "api"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-authz.workspace = true
nestrs-graphql.workspace = true
nestrs-graphql-cli.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
nestrs-openapi.workspace = true
nestrs-pipes.workspace = true
nestrs-resource.workspace = true
nestrs-server-timing.workspace = true
nestrs-telemetry.workspace = true
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
schemars.workspace = true
async-graphql.workspace = true
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true
uuid.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
