[package]
name = "api"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-authz.workspace = true
nestrs-authz-http.workspace = true
nestrs-graphql.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
nestrs-openapi.workspace = true
nestrs-orm.workspace = true
nestrs-pipes.workspace = true
nestrs-resource.workspace = true
nestrs-server-timing.workspace = true
nestrs-telemetry = { workspace = true, features = ["http"] }
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
schemars.workspace = true
async-graphql.workspace = true
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true
uuid.workspace = true
sea-orm.workspace = true
serde_json.workspace = true

[dev-dependencies]
# `test` enables poem's in-process TestClient, used to drive the mounted
# endpoints without binding a socket.
poem = { workspace = true, features = ["test"] }
# `telemetry` satisfies the TelemetryModule boot guard; `orm` provides the
# throwaway Postgres database fixture.
nestrs-testing = { workspace = true, features = ["telemetry", "orm"] }
# The e2e migrates the throwaway database with the same migrations production
# uses; `db` carries the `Migrator`.
db = { path = "../db" }
