[package]
name = "auth"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-auth.workspace = true
nestrs-config.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-telemetry = { workspace = true, features = ["http"] }
nestrs-throttler.workspace = true
identity.workspace = true
poem.workspace = true
tokio.workspace = true
serde.workspace = true
schemars.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
nestrs-testing = { workspace = true, features = ["telemetry"] }
