[package]
name = "mcp"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-config.workspace = true
nestrs-mcp.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
nestrs-server-timing.workspace = true
nestrs-telemetry.workspace = true
rmcp.workspace = true
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
validator.workspace = true
reqwest.workspace = true
