[package]
name = "mcp"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-config.workspace = true
nestrs-mcp.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
nestrs-server-timing.workspace = true
nestrs-telemetry = { workspace = true, features = ["http"] }
rmcp.workspace = true
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
validator.workspace = true
reqwest.workspace = true

[dev-dependencies]
# `telemetry` satisfies the TelemetryModule boot guard in the e2e.
nestrs-testing = { workspace = true, features = ["telemetry"] }
serde_json.workspace = true
