[package]
name = "worker"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-queue.workspace = true
nestrs-schedule.workspace = true
# Headless: inherits the bare default (otlp), so no `http` feature → no poem.
nestrs-telemetry.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true

[dev-dependencies]
# The e2e boots headless against the real Redis the worker uses and drives a
# queue round-trip through the QueueWorker transport.
nestrs-testing.workspace = true
