[package]
name = "nestrs-authz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "CASL-style authorization for nestrs: one ability definition driving an access gate, a SeaORM query pre-filter, and response field-masking."

[dependencies]
# A rule's condition lowers to `sea_orm::Condition`; in-memory checks read
# columns via `ModelTrait::get`.
sea-orm.workspace = true
# `Authorize` is a poem extractor, and implements `RouteResponseShaper` so
# `#[routes]` masks the response transparently — the HTTP binding of the engine.
nestrs-http.workspace = true
poem.workspace = true
# Response masking serializes a model then strips disallowed keys.
serde.workspace = true
serde_json.workspace = true
