[package]
name = "nestrs-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Internal — shared syn/quote helpers every nestrs *-macros crate is built from; not a direct dependency (third-party macro crates may also use it)."

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
