[package]
name = "nestrs-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Configuration loading for nestrs apps — the @nestjs/config analog (env + TOML via figment)."

[dependencies]
figment.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Only the extra `test` feature for `figment::Jail`; `serde` is already a normal dep.
figment = { workspace = true, features = ["test"] }
