[package]
name = "nestrs-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core building blocks (DI container, module trait, config, errors) for the nestrs framework."

[dependencies]
thiserror.workspace = true
figment.workspace = true
serde.workspace = true
nestrs-macros.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
