[package]
name = "nestrs-graphql-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Schema tooling for nestrs GraphQL apps: emit and drift-check a committed SDL file from an app's `schema` subcommand."

[dependencies]
nestrs-core.workspace = true
nestrs-graphql.workspace = true
