[package]
name = "nestrs-graphql-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Internal — GraphQL decorator macros (#[graphql], #[resolver]); re-exported by nestrs-graphql, not a direct dependency."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-codegen.workspace = true
