[package]
name = "nestrs-graphql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GraphQL resolver discovery + schema composition for nestrs apps, on top of async-graphql."

[dependencies]
nestrs-core.workspace = true
async-graphql.workspace = true
