[package]
name = "nestrs-graphql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GraphQL resolver discovery + schema composition for nestrs apps, on top of async-graphql."

[dependencies]
nestrs-core.workspace = true
nestrs-graphql-macros.workspace = true
# GraphqlModule self-mounts over HTTP via HttpEndpointMeta — this crate serves
# GraphQL on the HTTP transport. No cycle: nestrs-http does not depend on us.
nestrs-http.workspace = true
async-graphql.workspace = true
# Re-exported so the GraphqlModule mount code can name the poem integration
# through the framework, keeping it out of every app's manifest.
async-graphql-poem.workspace = true
# Re-exported so `#[resolver]`-generated `inventory::submit!` resolves through
# the framework without apps depending on `inventory` directly.
inventory.workspace = true
poem.workspace = true
# GraphqlModule logs the boot-time SDL emit through the framework's tracing.
tracing.workspace = true

[dev-dependencies]
# Boot the schema in-process and fire GraphQL requests at it (the ContextSeed
# bridge test). nestrs-http/nestrs-core are already runtime deps above.
nestrs-testing.workspace = true
tokio.workspace = true
serde_json.workspace = true
