[package]
name = "nestrs-health"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Reusable Kubernetes-style liveness/readiness probe module for nestrs applications."

[dependencies]
nestrs-core.workspace = true
nestrs-http.workspace = true
poem.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
