[package]
name = "nestrs-http-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Internal — HTTP decorator macros (#[controller], #[routes], verb attributes, #[interceptor]); re-exported by nestrs-http, not a direct dependency."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-codegen.workspace = true
