[package]
name = "nestrs-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "HTTP transport for nestrs: HttpTransport, Controller trait and HttpControllerMeta, built on top of poem."

[dependencies]
nestrs-core.workspace = true
nestrs-http-macros.workspace = true
nestrs-middleware.workspace = true
# The pipes themselves are transport-agnostic; this crate only adapts them to
# poem (the `Valid`/`Piped` extractors). `validator` is needed for the `Validate`
# bound on `Valid`; `serde_json` renders a `PipeError` as a JSON 400.
nestrs-pipes.workspace = true
validator.workspace = true
serde_json.workspace = true
poem.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
