[package]
name = "nestrs-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Internal — surface-agnostic nestrs decorators (#[injectable], #[module], #[hooks]); re-exported by nestrs-core, not a direct dependency."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-codegen.workspace = true
