[package]
name = "nestrs-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Model Context Protocol server support for nestrs — wraps the rmcp SDK behind the nestrs DI container and exposes a poem endpoint."

[dependencies]
nestrs-core.workspace = true
poem.workspace = true
rmcp.workspace = true
schemars.workspace = true
