[package]
name = "nestrs-openapi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "OpenAPI 3.0 document generation and bundled Swagger UI for nestrs HTTP controllers (the REST analog of nestrs-graphql's GraphqlModule)."

[dependencies]
nestrs-core.workspace = true
# OpenApiModule self-mounts over HTTP via HttpEndpointMeta and reads the
# discovered HttpControllerMeta — the same pattern GraphqlModule uses. No cycle:
# nestrs-http does not depend on us.
nestrs-http.workspace = true
poem.workspace = true
# Generates the component schemas from the `Json<T>` payload types `#[routes]`
# captured. `openapi3()` settings emit `$ref`s at `#/components/schemas/...`.
schemars.workspace = true
serde_json.workspace = true
