[package]
name = "nestrs-resource-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "The #[expose] attribute for nestrs-resource: expose a SeaORM entity to GraphQL + OpenAPI from one declaration."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-macro-support.workspace = true
