[package]
name = "nestrs-resource-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Internal — the #[expose] attribute (SeaORM entity to GraphQL + OpenAPI); re-exported by nestrs-resource, not a direct dependency."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-codegen.workspace = true
