[package]
name = "nestrs-resource"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Expose a SeaORM entity to GraphQL + OpenAPI from one declaration, via the #[expose] attribute."

[dependencies]
nestrs-resource-macros.workspace = true
