[package]
name = "nestrs-schedule-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "The #[cron_job] decorator macro for nestrs-schedule. Re-exported by nestrs-schedule."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-macro-support.workspace = true
